--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <!-- New: Profile Picture -->
             <img src="https://placehold.co/150x150/0f172a/ffffff?text=P" alt="Your Profile Picture" class="w-24 h-24 md:w-32 md:h-32 rounded-full mb-6 border-4 border-gray-700 shadow-lg">
             
-            <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4">Hi, I'm Your Name</h1>
+            <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4">Hi, I'm Kofi</h1>
             <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto">
-                A passionate web developer specializing in building modern and responsive web applications.
+                A passionate electrical and computer Engineer.
             </p>
         </section>
 
@@ -78,9 +78,9 @@
             <div class="bg-gray-800 rounded-xl shadow-lg p-8">
                 <h2 class="text-3xl font-bold mb-4 text-center text-white">About Me</h2>
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    Hello! I'm a self-taught developer with a strong interest in front-end technologies. I enjoy
-                    solving problems and creating clean, user-friendly experiences. You can find some of my
-                    work on my <a href="https://github.com/your-username" target="_blank" class="text-blue-400 hover:underline">GitHub profile</a>.
+                    Hello! I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in Robotics.
+                    You can find some of my work on my 
+                    <a href="https://github.com/Kaylam60" target="_blank" class="text-blue-400 hover:underline">GitHub profile</a>.
                     I'm always looking for new challenges and opportunities to learn and grow my skills.
                 </p>
             </div>
@@ -94,7 +94,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">Project Title 1</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
                     <!-- Updated: Added a new container for multiple links with spacing -->
@@ -107,7 +107,7 @@
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">Project Title 2</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
                     <a href="https://github.com/your-username/project-2" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
@@ -116,12 +116,20 @@
                 <!-- Project Card 3 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">Project Title 3</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
                 </div>
-
+              
+                <!-- Project Card 4 -->
+                <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <div>
+                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart Rate</h3>
+                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                    </div>
+                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                </div>
             </div>
         </section>
 
