--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Header Section -->
     <header class="bg-gray-800 shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
-            <a href="#" class="text-2xl font-bold text-gray-100">Your Name</a>
+            <a href="#" class="text-2xl font-bold text-gray-100">Kofi Aboagye Ohene Adu</a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="text-gray-300 hover:text-gray-100 transition-colors duration-300">About</a>
                 <a href="#projects" class="text-gray-300 hover:text-gray-100 transition-colors duration-300">Projects</a>
