--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
                     <a href="https://github.com/your-username/project-2" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                    <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>               
                 </div>
 
                 <!-- Project Card 3 -->
@@ -120,6 +121,7 @@
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                    <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                 </div>
               
                 <!-- Project Card 4 -->
@@ -138,12 +140,12 @@
             <h2 class="text-3xl font-bold mb-8 text-center text-white">Connect With Me</h2>
             <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-6">
                 <!-- GitHub Link -->
-                <a href="https://github.com/your-username" target="_blank"
+                <a href="https://github.com/Kaylam60" target="_blank"
                    class="bg-gray-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-gray-600 transition-colors duration-300">
                     GitHub
                 </a>
                 <!-- LinkedIn Link -->
-                <a href="https://www.linkedin.com/in/your-username" target="_blank"
+                <a href="https://www.linkedin.com/in/kofi-ohene-adu/" target="_blank"
                    class="bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-blue-500 transition-colors duration-300">
                     LinkedIn
                 </a>
