--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Hero Section -->
         <section id="hero" class="text-center py-16 md:py-24 flex flex-col items-center">
             <!-- New: Profile Picture -->
-            <img src="https://photos.app.goo.gl/keLZyjnpqkvinjmj6" alt=" Profile Picture" class="w-24 h-24 md:w-32 md:h-32 rounded-full mb-6 border-4 border-gray-700 shadow-lg">
+            <img src="https://avatars.githubusercontent.com/u/91022528?v=4" alt=" Profile Picture" class="w-24 h-24 md:w-32 md:h-32 rounded-full mb-6 border-4 border-gray-700 shadow-lg">
             
             <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4">Hi, I'm Kofi</h1>
             <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto">
