--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
-                    <a href="https://github.com/your-username/project-2" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                    <a href="https://github.com/your-username/project-2" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>               
                 </div>
 
@@ -120,7 +120,7 @@
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
-                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                 </div>
               
@@ -130,7 +130,7 @@
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart Rate</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
-                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">View on GitHub &rarr;</a>
+                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                 </div>
             </div>
         </section>
