--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        /* Animation class for the fade-in effect */
+        .fade-in-section {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+            will-change: opacity, transform;
+        }
+
+        /* Class applied when the section is in view */
+        .is-visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-100 antialiased">
@@ -87,7 +100,7 @@
         </section>
 
         <!-- Projects Section -->
-        <section id="projects" class="py-12 md:py-16">
+        <section id="projects" class="py-12 md:py-16 fade-in-section">
             <h2 class="text-3xl font-bold mb-8 text-center text-white">My Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
@@ -99,6 +112,7 @@
                     </div>
                     <!-- Updated: Added a new container for multiple links with spacing -->
                     <div class="flex flex-row space-x-4 justify-end">
+                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/your-username/project-1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
                         <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
@@ -110,8 +124,9 @@
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
-                    <a href="https://github.com/your-username/project-2" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                    <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>               
+                    <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
+                    <a href="https://github.com/Kaylam60/SLAM-Based-Robot" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://www.youtube.com/playlist?list=PLXE-M9kGWqSHYXEPRID2foamRpDfAV3vq" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>               
                 </div>
 
                 <!-- Project Card 3 -->
@@ -120,23 +135,25 @@
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
+                    <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                    <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                 </div>
               
                 <!-- Project Card 4 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart Rate</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                     </div>
+                    <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                 </div>
             </div>
         </section>
 
         <!-- Connect Section -->
-        <section id="connect" class="py-12 md:py-16">
+        <section id="connect" class="py-12 md:py-16 fade-in-section">
             <h2 class="text-3xl font-bold mb-8 text-center text-white">Connect With Me</h2>
             <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-6">
                 <!-- GitHub Link -->
@@ -156,9 +173,37 @@
     <!-- Footer -->
     <footer class="bg-gray-800 shadow-inner py-6 mt-12">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            &copy; 2023 Your Name. All rights reserved.
+            &copy; 2023 Kofi Ohene Adu. All rights reserved.
         </div>
     </footer>
 
+  <script>
+        // JavaScript to handle the fade-in effect on scroll
+        document.addEventListener("DOMContentLoaded", function() {
+            const sections = document.querySelectorAll('.fade-in-section');
+            
+            const observerOptions = {
+                root: null, // relative to the viewport
+                rootMargin: '0px',
+                threshold: 0.1 // 10% of the section is visible
+            };
+
+            const observer = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        // Add the is-visible class to trigger the animation
+                        entry.target.classList.add('is-visible');
+                        // Stop observing the element once it has been animated
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, observerOptions);
+
+            // Observe each section
+            sections.forEach(section => {
+                observer.observe(section);
+            });
+        });
+    </script>
 </body>
 </html>
