--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
-                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                        <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. 
+                          The core of the work focused on implementing and fine-tuning PID controllers for both linear distance and angular orientation, allowing the robot to navigate a mapped environment, 
+                          avoid obstacles, and perform specific stunts like a 180-degree turn. The final challenge involved combining these systems for full-route planning and execution.</p>
                     </div>
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                     <a href="https://github.com/Kaylam60/SLAM-Based-Robot" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
