--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   It's designed to be a simple, clean starting point for showcasing your work.
 
   Changes in this version:
-  - Corrected the fade-in effect implementation by adding the 'fade-in-section' class to all main content sections.
-  - Placed the project cards inside a div with the fade-in class to ensure they animate together.
+  - Added a placeholder image to each project card to make the portfolio more visual.
+  - The image uses a simple placeholder URL that you can replace with your own.
 
   How to use this code:
   1. Replace the placeholder content with your own information (name, bio, project details).
@@ -18,7 +18,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Portfolio( Work in Progress)</title>
     <!-- Favicon placeholder. Replace with your own. -->
     <link rel="icon" href="https://placehold.co/32x32/1a202c/ffffff?text=P" type="image/png">
     <!-- Load Tailwind CSS from CDN -->
@@ -106,6 +106,8 @@
 
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+1+Image" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
@@ -114,12 +116,14 @@
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/your-username/project-1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
                 </div>
 
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+2+Image" alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. The core of the work focused on implementing and fine-tuning PID controllers for both linear distance and angular orientation, allowing the robot to navigate a mapped environment, avoid obstacles, and perform specific stunts like a 180-degree turn. The final challenge involved combining these systems for full-route planning and execution.</p>
@@ -127,30 +131,33 @@
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/SLAM-Based-Robot" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <a href="https://www.youtube.com/playlist?list=PLXE-M9kGWqSHYXEPRID2foamRpDfAV3vq" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <a href="https://www.youtube.com/playlist?list=PLXE-M9kGWqSHYXEPRID2foamRpDfAV3vq" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
                 </div>
 
                 <!-- Project Card 3 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+3+Image" alt="Pidash Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
-                    </div>
+                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                 </div>
                 
                 <!-- Project Card 4 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
-                    </div>
+                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                 </div>
             </div>
         </section>
