--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+2+Image" alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
+                    <img src="https://github.com/Kaylam60/kaylam60.github.io/assets/SLAM.png" alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. The core of the work focused on implementing and fine-tuning PID controllers for both linear distance and angular orientation, allowing the robot to navigate a mapped environment, avoid obstacles, and perform specific stunts like a 180-degree turn. The final challenge involved combining these systems for full-route planning and execution.</p>
