--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                    </div>
                 </div>
                 
                 <!-- Project Card 4 -->
