--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/your-username/project-1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <a href="https://your-live-website.com" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -131,7 +131,7 @@
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/SLAM-Based-Robot" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <a href="https://www.youtube.com/playlist?list=PLXE-M9kGWqSHYXEPRID2foamRpDfAV3vq" target="_blank" class="text-green-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <a href="https://www.youtube.com/playlist?list=PLXE-M9kGWqSHYXEPRID2foamRpDfAV3vq" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -145,7 +145,7 @@
                      <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
                 
