--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
-                     <div class="flex flex-row space-x-4 justify-end">
+                    </div> 
+                    <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
@@ -156,7 +157,8 @@
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
-                     <div class="flex flex-row space-x-4 justify-end">
+                     </div>
+                    <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                 </div>
