--- a/index.html
+++ b/index.html
@@ -110,13 +110,17 @@
                     <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+1+Image" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
-                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                        <p class="text-gray-300 mb-4">Developed a fully autonomous robotics system for a competitive challenge, tasked with collecting and defending objects 
+                          on a playing field. As part of a three-person team, I was responsible for the robot's embedded systems programming and sensor 
+                          integration. The project emphasized an iterative design process, requiring rapid prototyping and problem-solving to overcome challenges like 
+                          unstable intake systems and sensor calibration. This experience honed my skills in mechatronics, C/C++ programming for microcontrollers (Arduino),
+                          and collaborative engineering within a project lifecycle.</p>
                     </div>
                     <!-- Updated: Added a new container for multiple links with spacing -->
                     <div class="flex flex-row space-x-4 justify-end">
-                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
-                        <a href="https://github.com/your-username/project-1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <a href="https://kaylam60.github.io/Cube-Craze-Annual/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
+                        <a href="https://github.com/Kaylam60/Cube-Craze-Annua1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
+                        <!a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -126,7 +130,10 @@
                     <img src="https://kaylam60.github.io/assets/SLAM.jpg" alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
-                        <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. The core of the work focused on implementing and fine-tuning PID controllers for both linear distance and angular orientation, allowing the robot to navigate a mapped environment, avoid obstacles, and perform specific stunts like a 180-degree turn. The final challenge involved combining these systems for full-route planning and execution.</p>
+                        <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. 
+                          The core of the work focused on implementing and fine-tuning PID controllers for both linear distance and angular orientation, allowing the robot 
+                          to navigate a mapped environment, avoid obstacles, and perform specific stunts like a 180-degree turn. The final challenge involved combining 
+                          these systems for full-route planning and execution.</p>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
@@ -163,6 +170,34 @@
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                 </div>
             </div>
+              
+              <!-- Project Card 5 -->
+                <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
+                    <div>
+                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
+                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                     </div>
+                    <div class="flex flex-row space-x-4 justify-end">
+                    <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                </div>
+            </div>
+              
+           <!-- Project Card 6 -->
+                <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
+                    <!-- Added image with rounded corners and bottom margin -->
+                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
+                    <div>
+                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
+                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                     </div>
+                    <div class="flex flex-row space-x-4 justify-end">
+                    <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                </div>
+            </div>   
         </section>
 
         <!-- Connect Section -->
