--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div> 
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
-                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://github.com/Kaylam60/PiDash" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                      </div>
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
-                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://github.com/Kaylam60/Heart-Rate-Monitor" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                 </div>
             </div>
               
