--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+1+Image" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/CCR.jpg" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">Developed a fully autonomous robotics system for a competitive challenge, tasked with collecting and defending objects 
@@ -145,7 +145,7 @@
                 <!-- Project Card 3 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+3+Image" alt="Pidash Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/Pidash.jpg" alt="Pidash Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
@@ -160,7 +160,7 @@
                 <!-- Project Card 4 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/HRH.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
@@ -174,14 +174,15 @@
               <!-- Project Card 5 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">Dodge the crooks</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                      </div>
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                     <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                 </div>
             </div>
               
@@ -190,12 +191,13 @@
                     <!-- Added image with rounded corners and bottom margin -->
                     <img src="https://placehold.co/600x400/374151/9ca3af?text=Project+4+Image" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">Sound Analyzer</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
                      </div>
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
-                    <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://github.com/Kaylam60/ECE-3140" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                    <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                 </div>
             </div>   
         </section>
