--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" width = 200 height =200 alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. 
