--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/CCR.jpg" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/CCR.jpg" width = 4000 height =2252 alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">Developed a fully autonomous robotics system for a competitive challenge, tasked with collecting and defending objects 
@@ -120,14 +120,14 @@
                     <div class="flex flex-row space-x-4 justify-end">
                         <a href="https://kaylam60.github.io/Cube-Craze-Annual/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/Cube-Craze-Annua1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
-                        <!a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>
+                        <!a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a>>
                     </div>
                 </div>
 
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" width = 200 height =200 alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" width = 4000 height =2252 alt="SLAM Based Automotive RC Car Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">SLAM Based Automotive RC car</h3>
                         <p class="text-gray-300 mb-4">This project involved building a small, autonomous RC car from the ground up, integrating various sensors and controls. 
