--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/CCR.jpg" width = 4000 height =2252 alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/CCR.jpg" width = "3000" height ="2252" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">Developed a fully autonomous robotics system for a competitive challenge, tasked with collecting and defending objects 
