--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
                     <img src="https://kaylam60.github.io/assets/CCR.jpg" width = "3000" height ="2252" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
-                        <p class="text-gray-300 mb-4">Developed a fully autonomous robotics system for a competitive challenge, tasked with collecting and defending objects 
-                          on a playing field. As part of a three-person team, I was responsible for the robot's embedded systems programming and sensor 
-                          integration. The project emphasized an iterative design process, requiring rapid prototyping and problem-solving to overcome challenges like 
-                          unstable intake systems and sensor calibration. This experience honed my skills in mechatronics, C/C++ programming for microcontrollers (Arduino),
-                          and collaborative engineering within a project lifecycle.</p>
+                        <p class="text-gray-300 mb-4">Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. The system utilized a two-wheel drive with QTI and TCS3200 color sensors for navigation and object detection. I designed and implemented the state-machine-based C/C++ code for autonomous operation, including line-following, color-based state transitions, and a strategic sweep-and-hoard mission. This project demonstrates proficiency in mechatronics, sensor integration, and low-level embedded programming.</p>
                     </div>
                     <!-- Updated: Added a new container for multiple links with spacing -->
                     <div class="flex flex-row space-x-4 justify-end">
