--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                     <img src="https://kaylam60.github.io/assets/CCR.jpg" width = "3000" height ="2252" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
-                        <p class="text-gray-300 mb-4">Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. The system utilized a two-wheel drive with QTI and TCS3200 color sensors for navigation and object detection. I designed and implemented the state-machine-based C/C++ code for autonomous operation, including line-following, color-based state transitions, and a strategic sweep-and-hoard mission. This project demonstrates proficiency in mechatronics, sensor integration, and low-level embedded programming.</p>
+                        <p class="text-gray-300 mb-4">Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. 
+                          The system utilized a two-wheel drive with QTI and TCS3200 color sensors for navigation and object detection. 
+                          I designed and implemented the state-machine-based C/C++ code for autonomous operation, including line-following, color-based state transitions, 
+                          and a strategic sweep-and-hoard mission. This project demonstrates proficiency in mechatronics, sensor integration, and low-level embedded programming.</p>
                     </div>
                     <!-- Updated: Added a new container for multiple links with spacing -->
                     <div class="flex flex-row space-x-4 justify-end">
@@ -144,7 +147,11 @@
                     <img src="https://kaylam60.github.io/assets/Pidash.jpg" alt="Pidash Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Pidash</h3>
-                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                        <p class="text-gray-300 mb-4">Built a Raspberry Pi-powered dashcam system designed for high reliability and deep vehicle integration.
+                          The core of the work centered on implementing a two-way camera system where all OpenCV-captured footage was managed by a custom power management circuit to guarantee preservation even if the ignition was cut. 
+                          Concurrently, a mediamtx server was configured to enable live, web-based video streaming.
+                          The final user experience involved integrating an intuitive Python pigame interface on an Adafruit touchscreen, which works in parallel to display critical live OBD-II stats
+                          (velocity, RPM, engine load) directly alongside the camera functionality.</p>
                     </div> 
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
