--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                     <img src="https://kaylam60.github.io/assets/HRH.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
-                        <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                        <p class="text-gray-300 mb-4"> This project implements a heart rate monitoring system in Verilog and assembly on a simple processor. 
+                          It counts heartbeat pulses from a sensor input, computes beats per minute over a fixed sampling window, and displays the result on a two-digit 7-segment display.
+                        </p>
                      </div>
                     <div class="flex flex-row space-x-4 justify-end">
                     <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
