--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             
             <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4">Hi, I'm Kofi</h1>
             <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto">
-                A passionate electrical and computer Engineer.
+                A passionate robotic enthusiast
             </p>
         </section>
 
@@ -91,7 +91,8 @@
             <div class="bg-gray-800 rounded-xl shadow-lg p-8">
                 <h2 class="text-3xl font-bold mb-4 text-center text-white">About Me</h2>
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    Hello! I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in Robotics.
+                    Hello! I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, automation, and control systems.
+                    I'm also looking to branch into cloud and networks. 
                     You can find some of my 
                     <a href="https://github.com/Kaylam60" target="_blank" class="text-blue-400 hover:underline">GitHub profile</a>.
                     I'm always looking for new challenges and opportunities to learn and grow my skills.
@@ -107,7 +108,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/CCR.jpg" width = "3000" height ="2252" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/CCR.jpg" width = "3000" height ="1000" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <p class="text-gray-300 mb-4">Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. 
