--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <!-- Project Card 5 -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between">
                     <!-- Added image with rounded corners and bottom margin -->
-                    <img src="https://kaylam60.github.io/assets/SLAM.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
+                    <img src="https://kaylam60.github.io/assets/Crooks.png" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Dodge the crooks</h3>
                         <p class="text-gray-300 mb-4">A brief description of your project. Talk about the technologies used and the problem it solved.</p>
