--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   It's designed to be a simple, clean starting point for showcasing your work.
 
   Changes in this version:
+  - FIXED: Ensured all project card images are the same size using the h-48 w-full object-cover classes.
   - FIXED: Enforced a consistent height for the ENTIRE project card using the h-[40rem] custom value.
-    This ensures all cards are the same size regardless of text length.
-  - Adjusted flex properties to ensure the links section is always pushed to the bottom.
+  - NEW: Added CSS rules to hide the scrollbar on the project descriptions while preserving scroll functionality, for a cleaner look.
 -->
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
@@ -54,10 +54,26 @@
             opacity: 1;
             transform: translateY(0);
         }
-        /* Fix for scrollable description if content overflows fixed card height */
+
+        /* --- Scrollbar Hiding/Styling --- */
         .project-description {
             max-height: 14rem; /* Define a max height for the text area */
             overflow-y: auto; /* Enable vertical scroll if text overflows */
+        }
+        
+        /* 1. Hide scrollbar for Chrome, Safari, and Opera */
+        .project-description::-webkit-scrollbar {
+            display: none;
+        }
+
+        /* 2. Hide scrollbar for IE and Edge (using ms-overflow-style) */
+        .project-description {
+            -ms-overflow-style: none;
+        }
+        
+        /* 3. Hide scrollbar for Firefox (using scrollbar-width) */
+        .project-description {
+            scrollbar-width: none;
         }
     </style>
 </head>
