--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     </div>
                     <!-- Links are justified to the end (bottom) -->
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/Cube-Craze-Annual/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
-                        <a href="https://github.com/Kaylam60/Cube-Craze-Annua1" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
+                        <a href="https://kaylam60.github.io/Cube-Craze/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
+                        <a href="https://github.com/Kaylam60/Cube-Craze" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
                         <!-- <a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a> -->
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                 <!-- Added h-160 class for fixed height -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
                     <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
-                    <img src="https://kaylam60.github.io/assets/HRH.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4 h-48 w-full object-cover">
+                    <img src="https://kaylam60.github.io/assets/fpga.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4 h-48 w-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <div class="project-description text-gray-300 mb-4">
