--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <p>Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. 
                             The system utilized a two-wheel drive with QTI and TCS3200 color sensors for navigation and object detection. 
                             I designed and implemented the state-machine-based C/C++ code for autonomous operation, including line-following, color-based state transitions, 
-                            and a strategic sweep-and-hoard mission. This project demonstrates proficiency in mechatronics, sensor integration, and low-level embedded programming.</p>
+                            and a strategic sweep-and-hoard mission.</p>
                         </div>
                     </div>
                     <!-- Links are justified to the end (bottom) -->
@@ -193,7 +193,7 @@
                 <!-- Added h-160 class for fixed height -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
                     <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
-                    <img src="https://kaylam60.github.io/assets/fpga.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4 h- w72-full object-cover">
+                    <img src="https://kaylam60.github.io/assets/fpga.jpg" alt="FPGA to your Heart Project Image" class="rounded-lg mb-4 h- w60-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">FPGA to your Heart</h3>
                         <div class="project-description text-gray-300 mb-4">
@@ -211,7 +211,7 @@
                 <!-- Added h-160 class for fixed height -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
                     <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
-                    <img src="https://kaylam60.github.io/assets/Crooks.png" alt="Dodge the Crooks Project Image" class="rounded-lg mb-4 h-96 w-full object-cover">
+                    <img src="https://kaylam60.github.io/assets/Crooks.png" alt="Dodge the Crooks Project Image" class="rounded-lg mb-4 h-60 w-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Dodge them crooks!</h3>
                         <div class="project-description text-gray-300 mb-4">
