--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio( Work in Progress)</title>
+    <title>Kofi's Portfolio</title>
     <!-- Favicon placeholder. Replace with your own. -->
     <link rel="icon" href="https://placehold.co/32x32/1a202c/ffffff?text=P" type="image/png">
     <!-- Load Tailwind CSS from CDN -->
@@ -101,6 +101,7 @@
             
             <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4">Hi, I'm Kofi</h1>
             <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto">
+                Welcome! Glad to have you here! 
                 A passionate robotic enthusiast
             </p>
         </section>
@@ -110,11 +111,13 @@
             <div class="bg-gray-800 rounded-xl shadow-lg p-8">
                 <h2 class="text-3xl font-bold mb-4 text-center text-white">About Me</h2>
                 <p class="text-gray-300 text-lg leading-relaxed">
+                    My name is Kofi ( the "Ko" is pronounce like "Koe". My name is not coffee/cafe. Yes I have heard both. 
                     Hello! I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, automation, and control systems.
                     I'm also looking to branch into cloud and networks. 
                     You can find some of my 
                     <a href="https://github.com/Kaylam60" target="_blank" class="text-blue-400 hover:underline">GitHub profile</a>.
                     I'm always looking for new challenges and opportunities to learn and grow my skills.
+                    Apart from the technical route, I like to dabble in photography, video editing, and languages  I'm learning to animate in 3D as well:)
                 </p>
             </div>
         </section>
@@ -132,7 +135,7 @@
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
                         <div class="project-description text-gray-300 mb-4">
-                            <p>Engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. 
+                            <p>I engineered and programmed an autonomous robot using an Arduino microcontroller and custom laser-cut chassis. 
                             The system utilized a two-wheel drive with QTI and TCS3200 color sensors for navigation and object detection. 
                             I designed and implemented the state-machine-based C/C++ code for autonomous operation, including line-following, color-based state transitions, 
                             and a strategic sweep-and-hoard mission.</p>
