--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <a href="https://kaylam60.github.io/HRH/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/Heart-Rate-Monitor" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     </div>
                 </div>
@@ -222,9 +222,9 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
-                        <a href="https://github.com/your-username/project-3" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                        <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                        <a href="https://kaylam60.github.io/DTC/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <a href="https://github.com/Kaylam60/Robot-perception" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
+                        <a href="https://youtu.be/" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
                 
