--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Dodge them crooks!</h3>
                         <div class="project-description text-gray-300 mb-4">
-                            <p>A brief description of your project. Talk about the technologies used and the problem it solved.</p>
+                            <p>*Description Pending* *Visitor patience will be appreciated:) *.</p>
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
