--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <div class="bg-gray-800 rounded-xl shadow-lg p-8">
                 <h2 class="text-3xl font-bold mb-4 text-center text-white">About Me</h2>
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    My name is Kofi ( the "Ko" is pronounce like "Koe". My name is not coffee/cafe. Yes I have heard both. 
-                    Hello! I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, automation, and control systems.
+                    Hello! My name is Kofi ( the "Ko" is pronounce like "Koe". My name is not coffee/cafe. Yes I have heard both😅. 
+                    I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, automation, and control systems.
                     I'm also looking to branch into cloud and networks. 
-                    You can find some of my 
+                    You can find some of my projects on my
                     <a href="https://github.com/Kaylam60" target="_blank" class="text-blue-400 hover:underline">GitHub profile</a>.
                     I'm always looking for new challenges and opportunities to learn and grow my skills.
                     Apart from the technical route, I like to dabble in photography, video editing, and languages  I'm learning to animate in 3D as well:)
